feature/token-endpoint (#5)
* feat: initial api contract design to allow token generation for a given user

* feat: still wip saving current progress

* feat: fixed db issues

* feat: change pk restrictions for users table. Updated swagger according latest changes.

* feat: add more information as an error response when we are activating a user.
